DSS-1256: Bugfix delete cargo button not visible properly (#410)
* Enhancemnet Synoptic Table:
Added dropdown to select loadable pattern

* Committing integrating actual api with the table

* Added export functionality for synoptic table

* DSS-1067
- Removed comments and mock data
- Removed consoles
- Corrected scopr of api service

* DSS-1067
- Changed ballast to a dynamic column
- Resetted loadable study and loadable plan on selecting voyage

* DSS-1191
- Save implementation

* DSS-1191
- Changed button position
- Added save success message

* DSS-1191
- Added toast on failure, success and invalid cases

* DSS-1191
- Committing completed functionality

* DSS-1191
- Removing consoles
- Adding comments for functions

* synoptical table design change

* DSS-1191
- Fixed isssue: Data within synoptical table is not refreshed when changing voyage

* textfield issue fixed

* DSS-1191
- Hiding buttons if loadable study is not selected

* synoptical table icon design changes

* pencil icon for edit port rotation

* carousel slider changes

* carousel light theme implementation

* DSS-1229 light theme implementaton

* light them edit port rotation design changes

* DSS-660 loadable study dropdown issue

* ship login page design and text field issue in port tab

* DSS-660 dropdown issue fixed

* DSS-1054 design changes

* Role list design

* user role permission design

* DSS 1256 Bugfix Delete cargo button is not visible properly

--- a/web/cpdss-portal/apps/cpdss/src/styles.scss
+++ b/web/cpdss-portal/apps/cpdss/src/styles.scss
@@ -1158,6 +1158,9 @@ input[type=number] {
     &:checked ~ .checkmark:after {
       display: block;
     }
+    &:disabled ~ .checkmark{
+      opacity: 0.4;
+    }
   }
 }
 
@@ -1603,9 +1606,9 @@ th{
   max-width: 25px;
 }
 .commingle-cargo1.p-editable-column, .commingle-cargo2.p-editable-column{
-  width: 140px;
-  min-width: 140px;
-  max-width: 140px;
+  width: 130px;
+  min-width: 130px;
+  max-width: 130px;
 }
 
 th .p-calendar .p-inputtext{
